samples/_failures_safe/1761163025_75049b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2eaa1fb4.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_2eaa1fb4.c:151:5: error: expected declaration or statement at end of input
  151 |     }
      |     ^
